# pm-utils

./: ChangeLog  MAINTAINERS  Makefile.am  README  TODO  configure.ac  configure.ac.asc  pm-utils.spec.in
build_on/debian_buster/: pm-utils_1.4.4-1_amd64.build
debian/: changelog  clean  control  copyright  pm-utils.install  pm-utils.lintian-overrides  rules  watch
debian/patches/: series
debian/patches/debian/: 25-pmu.patch
gentoo/: pm-utils-1.4.4.ebuild
gentoo/sys-power/pm-utils/: Manifest  pm-utils-9999.ebuild
logrotate/: Makefile.am
man/: pm-action.xml  pm-powersave.xml
pm/: pm-functions.in
pm/module.d/: tuxonice  uswsusp
pm/power.d/: Makefile.am  wireless
pm/sleep.d/: 00powersave  94cpufreq  Makefile.am
video-quirks/: Makefile.am
